translation-tool/inputs/source_meta/objects/Customer_Billing_Spec_SOMap__c.object
<CustomObject>
    <fields>
        <fullName>ALU_Prod_Name__c</fullName>
        <label>ALU Prod Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Deal_Description__c</fullName>
        <formula>DSS_Svc_Offering__r.Billing_Deal_Description__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Deal Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Deal_Name__c</fullName>
        <formula>DSS_Svc_Offering__r.Billing_Deal_Name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Deal Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_PO_Number__c</fullName>
        <label>Billing Purchase Order Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_type__c</fullName>
        <formula>text(DSS_Svc_Offering__r.Billing_Type__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Billing Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Billing_Spec__c</fullName>
        <label>Customer Billing Spec</label>
        <referenceTo>Customer_Billing_Spec_Template__c</referenceTo>
        <relationshipLabel>Customer Billing Spec SOMaps</relationshipLabel>
        <relationshipName>Customer_Billing_Spec_SOMaps</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>DSS_Plan_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSS Plan Name</label>
        <referenceTo>Plan__c</referenceTo>
        <relationshipLabel>Customer Billing Spec SOMaps</relationshipLabel>
        <relationshipName>Customer_Billing_Spec_SOMaps</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>DSS_Svc_Offering__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>DSS Service Offering</label>
        <referenceTo>Service_Offerings__c</referenceTo>
        <relationshipLabel>Customer Billing Spec SOMaps (DSS Service Offering)</relationshipLabel>
        <relationshipName>Customer_Billing_Spec_SOMaps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Do_Not_Cancel_On_Terminate__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Do Not Cancel On Terminate</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Hold_Charges_in_Billing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Hold Charges in Billing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Invoice_Description__c</fullName>
        <label>Invoice Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Is_Applicable_for_Customer__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Applicable for Customer</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Billing_Deal_Overridable__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Billing Deal Overridable</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Transport_Service_Offering__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Transport Service Offering</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Leasing_Invoice_Identifier__c</fullName>
        <label>Leasing Invoice Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Notes__c</fullName>
        <label>Notes</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Override_Billing_Deal__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Override Billing Deal</label>
        <referenceTo>Billing_Deal__c</referenceTo>
        <relationshipLabel>Customer Billing Spec SOMaps (Override Billing Deal)</relationshipLabel>
        <relationshipName>Customer_Billing_Spec_SOMaps1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Override_Price__c</fullName>
        <label>Override Price (Unit Price)</label>
        <precision>12</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Portal_Invoice_Identifier__c</fullName>
        <label>Portal Invoice Identifier</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WBS__c</fullName>
        <label>WBS</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Customer Billing Spec SOMap</label>
    <nameField>
        <displayFormat>CBSPSOMap-{0000000000}</displayFormat>
        <label>Customer Billing Spec SOMap Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Customer Billing Spec SOMaps</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>